--- a/index.html
+++ b/index.html
@@ -26,27 +26,37 @@
 			<div class="columnL">
 				<h2>Marco de Angelis</h2>
 				<p style="color: gray">Lecturer in Engineering at the University of Strathclyde</p>
-				My main research interest is assessing and improving the efficiency of computations done with imprecisely specified numbers. 
+				I am a researcher interested in formal verification with computer arithmetics.
+				I think the universe manifests to us through Mathematics, which is the greatest gift our intelligence possesses to make sense of the world. 
+				I believe the next humanism renaissance will be Life-centric, not just Human-centric. Nurturing Life in all its various forms is the foundation on which to build our forthcoming civilisation. 
+				I live in Glasgow with my partner and beautiful baby daughter. I speak Italian, Spanish, and English. I love walking, hiking, and spending time with friends and family. Learning is what I do most of my time. 
+
+				<!--My main research interest is assessing and improving the efficiency of computations done with imprecisely specified numbers. 
 				A number can be specified as an interval, a pair of moments, a probability distribution, an imprecisely specified distribution, and many more. 
 				There are numerous advantages that follow from being able to explicitly compute with imprecision. 
 				First, we can automatically propagate the uncertainty for model verification. 
 				Second, we can make rigorous inference with scarce empirical data for model calibration and validation. 
-				I apply this research for the enhancement of trust in digital twins for structural health monitoring. 
+				I apply this research for the enhancement of trust in digital twins for structural health monitoring. -->
 			<br>
 			<br>
         <h4>Publications</h4>
-    	<p>Here is my <a href="https://pureportal.strath.ac.uk/en/persons/marco-de-angelis/publications/">updated list of publications</a>, also in <a href="./rtf20221215.pdf" target="_blank"> pdf</a> format.</p>
-        <br>
-
-		<h4>About my web presence</h4>
-			<p> My citations and h-index is on <a href="https://scholar.google.co.uk/citations?user=3SlJpucAAAAJ&hl=en"><i class="ai ai-google-scholar" style="font-size:24px; color:slategray"></i>Google Scholar</a>.</p>
-			<p> My code is on <a href="https://github.com/marcodeangelis"> <i class="fa fa-github" style="font-size:18px;color:slategray"></i>Github</a>. </p>
-			<p> The accepted manuscripts and preprints are on <a href="https://www.researchgate.net/profile/Marco_De_Angelis6"><i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i>Research Gate</a>*.</p>
-			<p>* <font style="color:gray;font-size: smaller;">If the fulltext appears as <i>private</i>, chances are it is open-access. So, just look for the <i>doi</i> to access the published version! Otherwise, just drop me a message in <i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i>.</font></p>
+    	<p>Jump to <a href="https://pureportal.strath.ac.uk/en/persons/marco-de-angelis/publications/"> my Pure portal </a> to see my scholar activity or to see <a href="https://pureportal.strath.ac.uk/en/persons/marco-de-angelis/publications/"> my updated list of publications</a>. </p>
+        
+		<!-- Download them in <a href="./rtf20221215.pdf" target="_blank"> pdf</a> format. -->
+		<h5>More online scholar activity</h5>
+			<p style="margin-left: 15px;"> Citations and h-index <a href="https://scholar.google.co.uk/citations?user=3SlJpucAAAAJ&hl=en"><i class="ai ai-google-scholar" style="font-size:24px; color:slategray"></i>Google Scholar</a>.</p>
+			<p style="margin-left: 15px;"> Published code <a href="https://github.com/marcodeangelis"> <i class="fa fa-github" style="font-size:18px;color:slategray"></i>Github</a>. </p>
+			<p style="margin-left: 15px;"> Accepted manuscripts and preprints <a href="https://www.researchgate.net/profile/Marco_De_Angelis6"><i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i>Research Gate</a>*.</p>
+			<p>* <font style="color:gray;font-size: smaller;">If the fulltext appears as <i>private</i>, chances are it is open-access. So, just look for the <i>doi</i> to access the published version. Otherwise, just drop me a message in <i class="ai ai-researchgate" style="font-size:22px; color:slategray"></i>.</font></p>
 			<!-- <p> A short version of my CV is at <a href="https://www.linkedin.com/in/marco-de-angelis-186a2b3b/"><i class="fa fa-linkedin-square" style="font-size:18px; color:slategray"></i>Linkedin.</a></p> -->
 			<!-- <p> I am told the  <a href='https://orcid.org/0000-0001-8851-023X'> <i class="ai ai-orcid" style="font-size:18px; color:slategray"></i> Orcid</a> uniquely identifies me as a researcher.</p> -->
 			<!-- <p> Sporadically I <a href="https://twitter.com/linusdea"> <i class="fa fa-twitter" style="font-size:18px;color:slategray"></i> tweet</a> or retweet mainly about science.  -->
-            </div>
+
+		<br>
+		<h4>Socials</h4>
+			<p>I have just recently joined <a href="https://substack.com/@etabeta25">Substack</a> to replace my defunct Twitter.</p>
+		</div>
+		
 
 	    	<div class="columnR">
 	        	<img src="pics/headshot_marco.jpg" alt="headshot" width="150" height="180">
