--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
 		<div class="row">
 			<div class="columnL">
 				<h2>Marco de Angelis</h2>
-				<p style="color: gray">Lecturer in Engineering at the University of Strathclyde</p>
+				<p style="color: gray">Lecturer in Engineering, University of Strathclyde</p>
 				
 				<p>I am a Lecturer at the Centre for Intelligent Infrastructure within the Department of Civil and Environmental Engineering of the University of Strathclyde. I am interested in computing with imprecision and in formal verification with computer arithmetics. With imprecise computation we can automatically propagate the uncertainty for formal model verification and make rigorous inferences with scarce empirical data for model calibration and validation. These methods are very useful to build trust in cyber-physical systems. </p>
 
-				<p>I obtained a PhD in risk and uncertainty in 2016 from the University of Liverpool. I hold a Bachelor and Master of Engineering Science both cum laude in civil and environmental engineering from the University of Rome, Roma Tre. After the PhD, I was research associate and academic manager at the centre for doctoral training in risk and uncertainty of the University of Liverpool for over two years. In 2018, I was named researcher in the awarded EPSRC-UKRI programme grant on digital twins for improved dynamic design. In 2020, I was confirmed senior research associate on the same grant. In 2022, I joined Strathclyde as a full academic.</p>
+				<p>I obtained a PhD in risk and uncertainty in 2016 from the University of Liverpool. I obtained a Bachelor and Master of Engineering Science both cum laude from the University of Rome, Roma Tre. 
+					After the PhD, I was research associate and academic manager at the centre for doctoral training in risk and uncertainty of the University of Liverpool for about two years. 
+					In 2018, I was named researcher in the awarded EPSRC-UKRI programme grant on digital twins for improved dynamic design. 
+					In 2020, I was confirmed senior research associate on the same grant. In 2022, I joined Strathclyde as a full academic.</p>
 
-				<p>I live in Glasgow with my partner and beautiful baby daughter. I speak Italian, Spanish, and English. I love walking, hiking, and spending time with friends and family.</p>
+				<p>I live in Glasgow with my partner and beautiful baby daughter. I speak Italian, English and Spanish. I love walking, hiking and being my family and friends.</p>
 				<!--I am a researcher interested in formal verification with computer arithmetics.
 				I think that Mathematics is the greatest gift to our intelligence to make sense of the universe. 
 				I believe the next humanism renaissance will be Life-centric, not just Human-centric. Nurturing Life in all its various forms is the foundation upon which our global civilisation should be reinvented. 
@@ -43,9 +46,12 @@
 				First, we can automatically propagate the uncertainty for model verification. 
 				Second, we can make rigorous inference with scarce empirical data for model calibration and validation. 
 				I apply this research for the enhancement of trust in digital twins for structural health monitoring. -->
-			<br>
+		<br>
+		<h4><a href="./deangeliscv_2025.pdf">CV</a></h4>
+		<p style="color:gray;font-size: smaller;">updated January 2025</p>
+		<br>
         <h4>Publications</h4>
-    	<p>Jump to <a href="https://pureportal.strath.ac.uk/en/persons/marco-de-angelis/publications/"> my Pure portal </a> to see my scholar activity or to see <a href="https://pureportal.strath.ac.uk/en/persons/marco-de-angelis/publications/"> my updated list of publications</a>. </p>
+    	<p>Jump to <a href="https://pureportal.strath.ac.uk/en/persons/marco-de-angelis"> my pureportal </a> to see my scholar activity or to see <a href="https://pureportal.strath.ac.uk/en/persons/marco-de-angelis/publications/"> my updated list of publications</a>. </p>
         
 		<!-- Download them in <a href="./rtf20221215.pdf" target="_blank"> pdf</a> format. -->
 		<h5>More online scholar activity</h5>
